[package]
name = "dexscreener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.24"
serde_json = "1.0"
rust_decimal = { version = "1.32", features = ["serde-with-str"] }
rust_decimal_macros = "1.32"
serde_repr = "0.1"
thiserror = "1.0.44"
chrono = "0.4.34"
tokio = "1.36.0"
utoipa = { version = "3", features = ["chrono", "decimal"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros"] }
serde = { features = ["rc"] }
